Adding video links for geeknight feb 2017

--- a/content/2017-02.html
+++ b/content/2017-02.html
@@ -8,6 +8,7 @@ agenda:
   -
     time: "6:00"
     title: "Making desktop GUI using Python"
+    video_link: "https://www.youtube.com/watch?v=JHXpXV95V_k"
     subtitle: "This talk is about Tkinter and PyQt tools/program that can be used for GUI. We will have a demo of these tools, compare and contrast both the tools."
     speakers:
       -
@@ -18,6 +19,7 @@ agenda:
   -
     time: "7:00"
     title: "Environment creation using Terraform"
+    video_link: "https://www.youtube.com/watch?v=V8mQbuc6WPU"
     subtitle: "1. Intro to Terraform<br />
                2. Some useful Terraform commands<br />
                3. State file in Terraform.<br />
@@ -28,6 +30,7 @@ agenda:
   -
     time: "7:30"
     title: "Better Ruby on Rails - Phoenix framework"
+    video_link: "https://www.youtube.com/watch?v=wW3LtFoybvM"
     subtitle: "Phoenix framework for Elixir language which runs on erlang Beam VM is very performant and similar to Ruby on Rails in many ways. We want to introduce this framework to Ruby on Rails developers so that they have one more tool under their tool belt."
     speakers:
       -
