--- a/content/2017-03.html
+++ b/content/2017-03.html
@@ -3,14 +3,14 @@ start: 2017-03-30 17:45
 edition: 41
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/238139058/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "<span style='color: #00AEEF;'>Geek Night is celebrating International Women's Day. We are proud to present an all-women speaker edition. We'd love for you to join us in recognizing all women technologists by doing what we do best. Let's #TalkTechToHer !</span>"
 agenda:
   -
     time: "6:00"
     title: "Automating Deployment of R models in production environment"
     subtitle: "Data Science helps companies build models about sales, demand, finance, customer information and what not. R is widely used among data scientists for analysis and model building. But most R users have used it only for research and prototyping, not in actual production analytics code.<br/>
-* How to deploy R models in a production environment? Pros and cons of these methods.<br/>
-* Comparing R with other options for data science work. "
+    - How to deploy R models in a production environment? Pros and cons of these methods.<br/>
+    - Comparing R with other options for data science work. "
     speakers:
       -
         name: "Sophia George"
@@ -21,10 +21,10 @@ agenda:
     time: "7:00"
     title: "Building a data lake : An App Dev's perspective"
     subtitle: "From tools and technology to people and requirements, what's different in the data engineering space? App development is traditional now. All enterprises want to become data-guided. Data     lake is good start yet the know-hows and do-hows are so many. There's much anew to be learnt and also unlearnt. Everyone has their version of a big data stack, keeps continuously re-inventing.<br/>
-Sharing experiences from building a data lake in the retail domain, I will be talking about
-- what is this vast new space of data engineering,<br/>
-- why it is critical to think in terms of data rather than features and<br/>
-- how important it is to understand these technologies and create a data lake that is usable and insightful to business<br/>"
+    Sharing experiences from building a data lake in the retail domain, I will be talking about
+    - what is this vast new space of data engineering,<br/>
+    - why it is critical to think in terms of data rather than features and<br/>
+    - how important it is to understand these technologies and create a data lake that is usable and insightful to business<br/>"
     speakers:
       -
         name: "Geetha Balasundaram"
