added video links

--- a/content/2017-02.html
+++ b/content/2017-02.html
@@ -3,7 +3,7 @@ start: 2017-02-23 17:45
 edition: 40
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/237809036/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxLBY3Bb_tAWLCH-QBFvHJQ'>YouTube</a>."
 agenda:
   -
     time: "6:00"
