added youtube link for april

--- a/content/2017-04.html
+++ b/content/2017-04.html
@@ -3,11 +3,31 @@ start: 2017-04-27 17:45
 edition: 42
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/239402307/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqzv-vbQau41vWp7ubbANdsL'>YouTube</a>."
 agenda:
   -
     time: "6:00"
+    title: "Autonomous Robots"
+    video_link: "https://www.youtube.com/watch?v=qwuamhs6g94"
+    subtitle: "The autonomy of robotics is going to continue to influence the way humans and computers interact in our world. They currently serve many hobby, commercial, and military uses and we’ll take a dive into those use cases and how sensor fusion enables the ability to navigate autonomously and avoid obstacles in real time."
+    speakers:
+      -
+        name: "Mark Stratis"
+  -
+    time: "6:45"
+    title: "Break"
+  -
+    time: "7:00"
+    title: "0-100 deep learning image classification"
+    video_link: "https://www.youtube.com/watch?v=gOTJABTn_ac"
+    subtitle: "This talk is about image classification using convolutional neural networks"
+    speakers:
+      -
+        name: "Malaikannan Sankarasubbu"
+  -
+    time: "7:45"
     title: "Massive Scaling with Kubernetes"
+    video_link: "https://www.youtube.com/watch?v=bjA3x2VB5qo"
     subtitle: "<b>Introduction to Containers</b><br/>
   1. Operating system level virtualization<br/>
   2. Insights into container on the way it works<br/>
@@ -22,19 +42,7 @@ agenda:
     speakers:
       -
         name: "Raja Ravi"
-  -
-    time: "6:45"
-    title: "Break"
-  -
-    time: "7:00"
-    title: "0-100 deep learning image classification "
-    subtitle: " This talk is about image classification using convolutional neural networks"
-    speakers:
-      -
-        name: "Malaikannan Sankarasubbu"
-  -
-    time: "7:45"
-    title: "TBA"
+
   -
     time: "8:30"
     title: "Networking & Dinner"
