Modified abstract for the june talk

--- a/content/2017-06.html
+++ b/content/2017-06.html
@@ -18,7 +18,7 @@ agenda:
   -
     time: "6:45"
     title: "The Need of Decentralized Internet and an Intro to Etherium"
-    subtitle: "Chatbots are around for more than 2 decades now but their commercial adoption began in late 2015 as the user base on instant messaging apps exceeding that of social media platform. These conversational agents are disrupting the way retailers engage customers with a personalized touch. Fintech are transforming boring bill payments into to indulging conversation. Increasingly trivial tasks in service desk are automated with conversational agents. With Google reckoning 'AI First' as the new mantra, these interactive agents are set to become an essential feature of apps.In this talk, I will walk you through building your own bot using NLP, ML and Deep Learning techniques. And then discuss available tools and technology on the market."
+    subtitle: "This talk is about introduction to Etherium"
     speakers:
       -
         name: "Zahoor Mohamed"
@@ -28,8 +28,7 @@ agenda:
   -
     time: "7:45"
     title: "The Rise of Conversational Agents"
-    subtitle: "Generative Adversarial Networks (GANs) is one of the coolest
-    Machine Learning algorithm invented in the 21st century and has triggered innovation around Generative models. In this talk, we will decode the algorithm and discuss its interesting applications."
+    subtitle: "Chatbots are around for more than 2 decades now but their commercial adoption began in late 2015 as the user base on instant messaging apps exceeding that of social media platform. These conversational agents are disrupting the way retailers engage customers with a personalized touch. Fintech are transforming boring bill payments into to indulging conversation. Increasingly trivial tasks in service desk are automated with conversational agents. With Google reckoning 'AI First' as the new mantra, these interactive agents are set to become an essential feature of apps.In this talk, I will walk you through building your own bot using NLP, ML and Deep Learning techniques. And then discuss available tools and technology on the market."
     speakers:
       -
         name: "Prabakaran Kumaresshan"
