--- a/content/2017-06.html
+++ b/content/2017-06.html
@@ -3,11 +3,12 @@ start: 2017-06-29 17:45
 edition: 44
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/240933407/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href=''>YouTube</a>."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxpP-yiDZLdQfa28PmHVxzI'>YouTube</a>."
 agenda:
   -
     time: "6:00"
     title: "Kotlin for Android"
+    video_link: "https://www.youtube.com/watch?v=aQz1j9Osx70"
     subtitle: "Kotlin will be now shipped with Android Studio working out of the box, starting with version 3.0. No extra installations needed. No more incompatible plugins. All thanks to close collaboration between JetBrains and Google.Let's see how to get started with Kotlin."
     speakers:
       -
@@ -18,6 +19,7 @@ agenda:
   -
     time: "6:45"
     title: "The Need of Decentralized Internet and an Intro to Etherium"
+    video_link: "https://www.youtube.com/watch?v=xncGwLNIKAY"
     subtitle: "This talk is about introduction to Etherium"
     speakers:
       -
@@ -28,6 +30,7 @@ agenda:
   -
     time: "7:45"
     title: "The Rise of Conversational Agents"
+    video_link: "https://www.youtube.com/watch?v=eNUnrynjsJs"
     subtitle: "Chatbots are around for more than 2 decades now but their commercial adoption began in late 2015 as the user base on instant messaging apps exceeding that of social media platform. These conversational agents are disrupting the way retailers engage customers with a personalized touch. Fintech are transforming boring bill payments into to indulging conversation. Increasingly trivial tasks in service desk are automated with conversational agents. With Google reckoning 'AI First' as the new mantra, these interactive agents are set to become an essential feature of apps.In this talk, I will walk you through building your own bot using NLP, ML and Deep Learning techniques. And then discuss available tools and technology on the market."
     speakers:
       -
