--- a/content/2017-07.html
+++ b/content/2017-07.html
@@ -7,30 +7,30 @@ subnote: "This event will be live streamed on <a href=''>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: ""
-    video_link: "Understanding spark applications"
+    title: "Does your website work globally?"
+    video_link: ""
+    subtitle: "Lets look at potential issues that might hamper the availability and performance of your website across the globe through a case study."
+    speakers:
+      -
+        name: "Rajeswari Krishnakumar"
+        profile: "https://www.linkedin.com/in/rajeswari-krishnakumar/"
+  -
+    time: "6:30"
+    title: "Break"
+  -
+    time: "6:45"
+    title: "Understanding spark applications"
+    video_link: ""
     subtitle: "In this talk we'll break down a spark application to its components and as result enable ourselves to utilize our spark clusters efficiently. We'll also take a look at the spark ui which will help us understand our sparks applications better through visualisation."
     speakers:
       -
         name: "Siddharth Soni"
         profile: "https://www.linkedin.com/in/siddharth-soni-843300131/"
   -
-    time: "6:30"
+    time: "7:15"
     title: "Break"
-  -
-    time: "6:45"
-    title: "Understanding bitcoin/blockchain , for beginners"
-    video_link: ""
-    subtitle: "The session will be an introductory session on bitcoin/blockchain. It will cover concepts of, decentralisation, mining, proof of work etc. Session will have less of presentation, and the aim is to introduce the concepts by playing a game which simulate the network."
-    speakers:
-      -
-        name: "Shanu Madassery"
-        profile: "https://www.linkedin.com/in/shanu-madassery-21943664/"
   -
     time: "7:30"
-    title: "Break"
-  -
-    time: "7:45"
     title: "A Scalable distributed service discovery tool"
     video_link: ""
     subtitle: "With all systems adapting microservices architecture, consul is a tool that allows solving how services are discovered among each other while also being distributed and highly available. As part of the talk, we will be looking at the architecture of consul, how it scales to support large cluster of nodes and also a demo on how simple they integrate with our systems."
@@ -39,6 +39,6 @@ agenda:
         name: "Aswin Karthik S"
         profile: "https://www.linkedin.com/in/aswin-karthik-s-2b944991/"
   -
-    time: "8:30"
+    time: "8:15"
     title: "Networking & Dinner"
 ---
