Added vedio links for speakers

--- a/content/2017-07.html
+++ b/content/2017-07.html
@@ -2,8 +2,8 @@
 start: 2017-07-27 17:45
 edition: 45
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/241907786/"
-talk: "https://www.youtube.com/playlist?list=PLH8WPOo4hnqxGTxipiFxJ0sVwDho6FnRJ"
-subnote: "This event will be live streamed on <a href=''>YouTube</a>."
+talk: ""
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxGTxipiFxJ0sVwDho6FnRJ'>YouTube</a>."
 agenda:
   -
     time: "6:00"
