Added vedio links for speakers

--- a/content/2017-07.html
+++ b/content/2017-07.html
@@ -2,13 +2,13 @@
 start: 2017-07-27 17:45
 edition: 45
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/241907786/"
-talk: ""
+talk: "https://www.youtube.com/playlist?list=PLH8WPOo4hnqxGTxipiFxJ0sVwDho6FnRJ"
 subnote: "This event will be live streamed on <a href=''>YouTube</a>."
 agenda:
   -
     time: "6:00"
     title: "Does your website work globally?"
-    video_link: ""
+    video_link: "https://www.youtube.com/watch?v=2FdKPKwqmCE&list=PLH8WPOo4hnqxGTxipiFxJ0sVwDho6FnRJ&index=1"
     subtitle: "Lets look at potential issues that might hamper the availability and performance of your website across the globe through a case study."
     speakers:
       -
@@ -20,7 +20,7 @@ agenda:
   -
     time: "6:45"
     title: "Understanding spark applications"
-    video_link: ""
+    video_link: "https://www.youtube.com/watch?v=isp8ARm-OS0&list=PLH8WPOo4hnqxGTxipiFxJ0sVwDho6FnRJ&index=2"
     subtitle: "In this talk we'll break down a spark application to its components and as result enable ourselves to utilize our spark clusters efficiently. We'll also take a look at the spark ui which will help us understand our sparks applications better through visualisation."
     speakers:
       -
@@ -32,7 +32,7 @@ agenda:
   -
     time: "7:30"
     title: "A Scalable distributed service discovery tool"
-    video_link: ""
+    video_link: "https://www.youtube.com/watch?v=a07Y5yylAAs&list=PLH8WPOo4hnqxGTxipiFxJ0sVwDho6FnRJ&index=3"
     subtitle: "With all systems adapting microservices architecture, consul is a tool that allows solving how services are discovered among each other while also being distributed and highly available. As part of the talk, we will be looking at the architecture of consul, how it scales to support large cluster of nodes and also a demo on how simple they integrate with our systems."
     speakers:
       -
