Fixed the bug:Presentor link was missing

--- a/content/2017-07.html
+++ b/content/2017-07.html
@@ -2,7 +2,7 @@
 start: 2017-07-27 17:45
 edition: 45
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/241907786/"
-talk: ""
+talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
 subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxGTxipiFxJ0sVwDho6FnRJ'>YouTube</a>."
 agenda:
   -
