Updated content for Sep 2017 edition

--- a/content/2017-09.html
+++ b/content/2017-09.html
@@ -1,7 +1,7 @@
 ---
 start: 2017-09-21 17:45
 edition: 47
-subheader: Special Edition
+subheader: "Special Edition. Please bring your laptop."
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/242977356/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
 subnote: "This event will be live streamed on YouTube."
