added content for oct 2017

--- a/content/2017-08.html
+++ b/content/2017-08.html
@@ -3,11 +3,12 @@ start: 2017-08-31 17:45
 edition: 46
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/242277560/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqyj7oofv1mshO6IrBhWwmaO'>YouTube</a>."
 agenda:
   -
     time: "6:00"
     title: "Designing and Developing for 3D interfaces of Virtual Reality"
+    video_link: "https://youtu.be/6DZ7K5fGUPw"
     speakers:
       -
         name: "Anand Anbu"
@@ -17,12 +18,14 @@ agenda:
   -
     time: "6:45"
     title: "Introduction to CSS Flexbox"
+    video_link: "https://youtu.be/3tuJ15raagQ"
     speakers:
       -
         name: "Markandan Ramadoss"
   -
     time: "7:30"
     title: "Augmented Reality - Tech talk and Demo"
+    video_link: "https://youtu.be/YaYkL5v-fLw"
     speakers:
       -
         name: "Ganesh Sundaramoorthy"
