--- a/content/2017-09.html
+++ b/content/2017-09.html
@@ -10,6 +10,7 @@ agenda:
     time: "6:00"
     title: "Incremental Design - one that evolves"
     subtitle: "We are happy to announce an Incremental Design Workshop for Software Developers. For all you developers who can't wait to test your software design skills, here's your chance!.Over a period of 3 hours, you find out how Incremental Design works - or does it? You can either pair with a fellow participant or work solo on a given problem statement in any programming language of your choice.A series of check points during the course of the workshop will ensure that we pause, observe and learn to design the right way.  At the end of the session, each individual/team can also present their design and learnings"
+    video_link: "https://youtu.be/1gNxc8z1TCE"
     speakers:
       -
         name: "Sivasubramanian V"
