--- a/content/2017-10.html
+++ b/content/2017-10.html
@@ -3,7 +3,7 @@ start: 2017-10-26 17:45
 edition: 48
 participate: "https://www.meetup.com/preview/Chennai-Geek-Night/events/243708360"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxjJm9GW8eIowuK4NOsw2Y4'>YouTube</a>."
 agenda:
   -
     time: "6:00"
@@ -14,6 +14,7 @@ agenda:
     2. ML Pipelines to orchestrate and visualize the end to end flow - A typical ML workflow has multiple stages. How do you model your entire workflow as a pipeline (similar to Build Pipeline in CD) to automate the entire process and help visualize the entire end to end flow?</br>
     3. Model Quality Assurance - What quality gates and evaluation metrics, either manual and automated, should be used before exporting (promoting) models for serving in production? What happens when several different models are in play? How do you measure the models individually and then also in combination</br>
     4. Serving Models in Production - How do you serve and scale these models in production? What happens when these models are heterogenous (built using different languages - Scala, Python etc.)?"
+    video_link: "https://www.youtube.com/watch?v=K_PL0TYvTQw"
     speakers:
       -
         name: "Rajesh Muppalla"
@@ -23,15 +24,21 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: "TBA"
-  -
-    time: "7:45"
     title: "Democratising data with internal data pipeline platform"
     subtitle: "This talk is about why and how we built our internal data pipeline platform. At Indix we have data in different formats - html pages, thrift records, avro records and the usual culprits - CSVs and other plain text formats. We have data in TBs and in a few KBs and data consisting of billions of records and data consisting of a few hundred rows. And all this data - in one form or another - is consumed by the engineers, the product managers, the customer success team and even our CEO. Our biggest challenge was in knowing which data exists and where, and how to access it efficiently while balancing costs and productivity of the people involved. We had to make do with adhoc Scalding jobs. There was no single place where people can discover the different 'datasets' that we had, what format they were in, where they were stored and how frequently a new version was published. Running jobs was also not straightforward since things like finding a cluster to use were not trivial. In order to democratize the access to data and make it easy for anyone within the organization to work and play with the data we had, we went about building a data pipeline platform for our internal users. Leveraging the power of Spark, the platform allows the users to define datasets (along with their schema) and create pipelines to work with the datasets. The pipelines can be configured via a wizard based UI or a JSON config and all the jobs run on dedicated and auto scaled Spark clusters. Predefined transformations to filter, project, sample and even type in sql queries have made it powerful but simple to use for any type of user. Support for S3, Sftp and even Google sheets made it usable for different internal and customer use cases. The platform also enables us to load the same data and perform similar operations on them via notebooks with just couple of lines of client code. Today we run over 300 pipelines across over 100 datasets and thousands of versions of the datasets using this platform. The data pipeline platform has truly changed the way we ingest, manipulate, analyze and egress data across the organization, and is on course to be converted into a self-serve platform for our (external) customers too."
+    video_link: "https://www.youtube.com/watch?v=-8ISx7IOJIk"
     speakers:
       -
         name: "Manoj Mahalingam"
         profile: "https://www.linkedin.com/in/manojlds/"
+  -
+    time: "7:45"
+    title: "Using Monoids for Large Scale Business Stats"
+    video_link: "https://www.youtube.com/watch?v=RJepu3sbmkU"
+    speakers:
+      -
+        name: "Ashwanth Kumar"
+        profile: "https://www.linkedin.com/in/codingnirvana/"
   -
     time: "8:30"
     title: "Networking & Dinner"
