--- a/content/2017-10.html
+++ b/content/2017-10.html
@@ -34,11 +34,20 @@ agenda:
   -
     time: "7:45"
     title: "Using Monoids for Large Scale Business Stats"
+    subtitle: "At Indix we collect and process lots of data. Most of our processing initially were done as MapReduce jobs but as our data grew in size we moved towards stream processing. We monitor the behaviour of our systems through collection of business metrics. It was relatively easy to write Stats jobs on our MapReduce output but things got tricky when we moved to Stream based processing.
+    <p>Our key learnings over the years have been
+    <ul>
+    <li>Approximate stats now > Accurate stats tomorrow</li>
+    <li>Our metrics were just aggregates (counts / uniques) with rollups</li>
+    <li>Existing open source systems were more for system monitoring than business metrics</li>
+    <li>Model aggregates as Commutative Monoids using <a href='https://twitter.github.io/algebird/typeclasses/monoid.html'>Algebird's</a> typeclasses.</li>
+    </ul></p>
+    <p>We put all our learnings and built a system called Abel which solved this for us. It aggregates a million events in ~15 minutes on a single box.</p>"
     video_link: "https://www.youtube.com/watch?v=RJepu3sbmkU"
     speakers:
       -
         name: "Ashwanth Kumar"
-        profile: "https://www.linkedin.com/in/codingnirvana/"
+        profile: "https://www.linkedin.com/in/ashwanthkumar/"
   -
     time: "8:30"
     title: "Networking & Dinner"
