added youtube links for nov 2017

--- a/content/2017-11.html
+++ b/content/2017-11.html
@@ -3,11 +3,12 @@ start: 2017-11-30 17:45
 edition: 49
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/244573114/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqwtOURcFOxB7ZMAIYF8Vo3b'>YouTube</a>."
 agenda:
   -
     time: "6:00"
     title: "Serverless Architecture"
+    video_link: "https://www.youtube.com/watch?v=9bJPYi3x9BA"
     speakers:
       -
         name: "Karthikeyan VK"
@@ -17,12 +18,14 @@ agenda:
   -
     time: "7:00"
     title: "Concurrency vs Parallelism"
+    video_link: "https://www.youtube.com/watch?v=dilzi3CPvhw"
     speakers:
       -
         name: "Narendran R"
   -
     time: "7:45"
     title: "Building the intuition behind Deep Learning approach for Image Classification"
+    video_link: "https://www.youtube.com/watch?v=WPV-vgLauIs"
     speakers:
       -
         name: "Anurag Mishra"
