add youtube link for dec 2017

--- a/content/2017-12.html
+++ b/content/2017-12.html
@@ -3,31 +3,27 @@ start: 2017-12-21 17:45
 edition: 50
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/245536382/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqy-bKy0tVi25KJDp9LxIEm0'>YouTube</a>."
 agenda:
   -
     time: "6:00"
-    title: "Finding Dory"
-    speakers:
-      -
-        name: "Vishal Juneja"
-  -
-    time: "6:30"
-    title: "Break"
-  -
-    time: "6:45"
     title: "Concurrency primitives through the years"
+    video_link: "https://www.youtube.com/watch?v=SKhWYNXsexU"
     speakers:
       -
         name: "Vijay Veeraraghavan"
   -
-    time: "7:30"
+    time: "6:45"
+    title: "Break"
+  -
+    time: "7:00"
     title: "Introduction to Bitcoin/Blockchain"
     subtitle: "While crypto currencies are making news in the market, technology behind these are interesting. This session aims to introduct basic concepts behind Bitcoin network, and will be done by playing a simple game."
+    video_link: "https://www.youtube.com/watch?v=1s18Qo7nOw8"
     speakers:
       -
         name: "Shanu M"
   -
-    time: "8:30"
+    time: "8:00"
     title: "Networking & Dinner"
 ---
