Arvind: update 2nd talk info for 51st edition

--- a/content/2018-01.html
+++ b/content/2018-01.html
@@ -16,7 +16,14 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: "TBA"
+    title: "Going Serverless from Build to Deploy"
+    speakers:
+      -
+        name: "Krishnaswamy Subramaniam"
+        profile: "https://www.linkedin.com/in/krishnaswamy-subramanian-20359118/"
+      -
+        name: "Aswin Karthik"
+        profile: "https://www.linkedin.com/in/aswin-karthik-s-2b944991/"
   -
     time: "7:30"
     title: "Evolutionary Architecture"
