Add video links for jan 2018

--- a/content/2018-01.html
+++ b/content/2018-01.html
@@ -3,11 +3,12 @@ start: 2018-01-23 17:45
 edition: 51
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/mxzvnnyxcbhc/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/watch?v=EQS8zdbYOko&list=PLH8WPOo4hnqx9q7ZJKA-8Mk6wqKnHfzNQ'>YouTube</a>."
 agenda:
   -
     time: "6:00"
     title: "Exploring Java 9 Modules From Scratch"
+    video_link: "https://www.youtube.com/watch?v=EQS8zdbYOko&list=PLH8WPOo4hnqx9q7ZJKA-8Mk6wqKnHfzNQ&index=1"
     speakers:
       -
         name: "Vignesh Ramesh"
@@ -17,6 +18,7 @@ agenda:
   -
     time: "7:00"
     title: "Going Serverless from Build to Deploy"
+    video_link: "https://www.youtube.com/watch?v=VJyzrw7Qg9Q&list=PLH8WPOo4hnqx9q7ZJKA-8Mk6wqKnHfzNQ&index=2"
     speakers:
       -
         name: "Krishnaswamy Subramaniam"
@@ -27,6 +29,7 @@ agenda:
   -
     time: "7:30"
     title: "Evolutionary Architecture"
+    video_link: "https://www.youtube.com/watch?v=yZ5KXi4uP5I&list=PLH8WPOo4hnqx9q7ZJKA-8Mk6wqKnHfzNQ&index=3"
     speakers:
       -
         name: "Rebecca Parsons (CTO, ThoughtWorks)"
