--- a/content/2018-02.html
+++ b/content/2018-02.html
@@ -3,7 +3,7 @@ start: 2018-02-22 17:45
 edition: 52
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/mxzvnnyxdbdc/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <div class='youtube'><div>"
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/channel/UCsRTEAuVWSCnlFfb22rpOZg/feed' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:00"
