[Viky] Updated speaker,meetup and youtube link for April edition

--- a/content/2018-04.html
+++ b/content/2018-04.html
@@ -1,13 +1,14 @@
 ---
 start: 2018-04-26 17:45
 edition: 54
-participate: "https://www.meetup.com/Chennai-Geek-Night/events/247149664/"
+participate: "https://www.meetup.com/Chennai-Geek-Night/events/246712896/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href='' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxLr9m7usoButaX3JVnpi9B' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:00"
     title: "CSS Variables"
+    video_link: "https://youtu.be/khGXHwG5OYY"
     speakers:
       -
         name: "Markandan Ramadoss"
@@ -17,17 +18,22 @@ agenda:
   -
     time: "6:45"
     title: "Can Database Indexes be learned using Deep Learning?"
+    video_link: "https://www.youtube.com/watch?v=tn56rJkJHGU"
     speakers:
       -
         name: "Malaikannan Sankarasubbu"
   -
     time: "7:30"
     title: "GraphQL"
+    video_link: "https://www.youtube.com/watch?v=bXnl7f3R_rU"
     speakers:
       -
         name: "Logeshkumar"
+        profile: "https://www.google.com/url?q=https://www.linkedin.com/in/logesh-kumar-526a6882/&sa=D&source=hangouts&ust=1524669063503000&usg=AFQjCNHxndhcePe8Xn4PXS8_O_bBdhgjDA"
+        image: "logeshkumar.jpg"
       -
         name: "Sonal"
+        image: "sonal.jpg"
   -
     time: "8:15"
     title: "Networking & Dinner"
