changed date of 55th edition

--- a/content/2018-05.html
+++ b/content/2018-05.html
@@ -1,5 +1,5 @@
 ---
-start: 2018-05-31 17:45
+start: 2018-06-6 17:45
 edition: 55
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/249543102/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
@@ -7,10 +7,7 @@ subnote: "This event will be live streamed on YouTube."
 agenda:
   -
     time: "6:00"
-    title: "Progressive Web Apps"
-    speakers:
-      -
-        name: "Anjana S"
+    title: "TBA"
   -
     time: "6:30"
     title: "Break"
