updated content for 55th edition

--- a/content/2018-05.html
+++ b/content/2018-05.html
@@ -7,7 +7,10 @@ subnote: "This event will be live streamed on YouTube."
 agenda:
   -
     time: "6:00"
-    title: "TBA"
+    title: "Jest"
+    speakers:
+      -
+        name: "Markandan Ramadoss"
   -
     time: "6:30"
     title: "Break"
@@ -20,8 +23,11 @@ agenda:
         name: "Dinesh Kumar S"
   -
     time: "7:30"
-    title: "TBA"
+    title: "Lightning fast application development with MobX"
+    speakers:
+      -
+        name: "Dani Akash"
   -
-    time: "8:15"
+    time: "8:00"
     title: "Networking & Dinner"
 ---
