Add stream links for may 2018

--- a/content/2018-05.html
+++ b/content/2018-05.html
@@ -8,6 +8,7 @@ agenda:
   -
     time: "6:00"
     title: "Jest"
+    video_link: "https://youtu.be/Xj2YV6pNaCQ"
     speakers:
       -
         name: "Markandan Ramadoss"
@@ -17,6 +18,7 @@ agenda:
   -
     time: "6:45"
     title: "4 Simple Steps to Write A Game Using Canvas"
+    video_link: "https://youtu.be/vC4vCF9-1V4"
     subtitle: "An overview of HTML5 Canvas. Then, the basics of Game development using Canvas. Finally, creating a mini game live in front of the audience."
     speakers:
       -
@@ -24,6 +26,7 @@ agenda:
   -
     time: "7:30"
     title: "Lightning fast application development with MobX"
+    video_link: "https://youtu.be/2xjVsMdp3bo"
     speakers:
       -
         name: "Dani Akash"
