added content for jun 2018

--- a/content/2018-05.html
+++ b/content/2018-05.html
@@ -3,7 +3,7 @@ start: 2018-06-7 17:45
 edition: 55
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/249543102/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on YouTube."
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqybY3Pw2moc79YkolSahSZQ' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:00"
