added 3rd talk for aug 2018

--- a/content/2018-08.html
+++ b/content/2018-08.html
@@ -7,7 +7,10 @@ subnote: "This event will be live streamed on YouTube."
 agenda:
   -
     time: "6:00"
-    title: "TBA"
+    title: "Router firmware extraction and backdooring"
+    speakers:
+      -
+        name: "Chirag Jariwala"
   -
     time: "6:45"
     title: "Break"
