Add stream links for aug 2018 edition

--- a/content/2018-08.html
+++ b/content/2018-08.html
@@ -8,6 +8,7 @@ agenda:
   -
     time: "6:00"
     title: "Router firmware extraction and backdooring"
+    video_link: "https://youtu.be/6owXX36MwlU?list=PLH8WPOo4hnqyYItsvHf6tk3TD2tPeQ3PO"
     speakers:
       -
         name: "Chirag Jariwala"
@@ -17,6 +18,7 @@ agenda:
   -
     time: "7:00"
     title: "Getting familiar with Go concurrency"
+    video_link: "https://youtu.be/c_RrUdEy8O8?list=PLH8WPOo4hnqyYItsvHf6tk3TD2tPeQ3PO"
     subtitle: "This talk will be >50% live coding, where I will be taking the attendees through the simplicity of Go's concurrency constructs: Mainly the goroutines, channels and WaitGroups to synchronise between them. I will be taking an existing piece of code and making it async, while highlighting how Go's constructs help in making this possible easily."
     speakers:
       -
@@ -24,6 +26,7 @@ agenda:
   -
     time: "7:30"
     title: "Instant GraphQL on Postgres with event triggers for serverless"
+    video_link: "https://youtu.be/jYOU3EKTjbU?list=PLH8WPOo4hnqyYItsvHf6tk3TD2tPeQ3PO"
     subtitle: "The true power of GraphQL is not just its syntax but the fact that it makes it possible to think about your application in ways you’d never thought about it before. The realtime bits of GraphQL spec is one such mind-opening abstraction when you use it as a tool to think about architecting an asynchronous, event-driven backend.<br/><br/>
 Building backends that are asynchronous and event-driven is not easy. The rise of serverless and tooling is making the ops easy, but the larger problem around architecting an application (especially the frontend) to be ready to consume a fundamentally asynchronous backend still remains. GraphQL subscriptions and live-queries offer an opportunity to design a “reactive” contract between the backend and the frontend.<br/><br/>
 This talk is about how you can use the realtime bits of the GraphQL spec and the Hasura GraphQL Engine to think of the data-flow through your entire backend application. To draw on the redux analogy, GraphQL mutations are actions, your datastore is the “state”, your asynchronous business logic are the “reducers”, and GraphQL subscriptions/live-queries become the state update glue.<br/><br/>
