E-59 | Update description for event

--- a/content/2018-09.html
+++ b/content/2018-09.html
@@ -19,6 +19,7 @@ agenda:
   -
     time: "7:00"
     title: "Modern acceptance testing using Gauge and Taiko"
+    subtitle: "Web applications have evolved but it's getting harder to write reliable end to end tests for these modern applications. We discuss and show how to solve these problems using the open source frameworks Gauge and Taiko"
     video_link: "https://youtu.be/egcZByG_dZ8"
     speakers:
       -
