--- a/content/2018-09.html
+++ b/content/2018-09.html
@@ -18,7 +18,7 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: "Modern acceptance testing using Gauge and Taiko"
+    title: "The smart approach to testing using Gauge+Taiko"
     subtitle: "Web applications have evolved but it's getting harder to write reliable end to end tests for these modern applications. We discuss and show how to solve these problems using the open source frameworks Gauge and Taiko"
     video_link: "https://youtu.be/egcZByG_dZ8"
     speakers:
