--- a/content/2018-10.html
+++ b/content/2018-10.html
@@ -9,9 +9,10 @@ agenda:
     time: "6:00"
     title: "Empathy maketh an engineer"
     subtitle: "The journey towards becoming a better developer involves in more than just coding. Empathy is the most important skill that any developer should practice. In this talk we will see as a developer how to write code empathetically and how empathy will help you to become a better software craftsman. By the end of the talk, audience will know how to practice empathy, build great softwares and great teams empathetically."
+    video_link: "https://www.youtube.com/watch?v=bb2OSAxQg7M"
     speakers:
       -
-        name: "Narendran	R"
+        name: "Narendran R"
   -
     time: "6:30"
     title: "Break"
@@ -19,6 +20,7 @@ agenda:
     time: "6:45"
     title: "API Gateway"
     subtitle: "How to deal with growing need to manage and secure API's using API gateway"
+    video_link: "https://www.youtube.com/watch?v=_l7UzFY2G0U"
     speakers:
       -
         name: "Krishnaswamy Subramanian"
@@ -26,6 +28,7 @@ agenda:
   -
     time: "7:30"
     title: "Flutter"
+    video_link: "https://www.youtube.com/watch?v=St24M-D4ZVI"
     subtitle: "How Flutter is different from other mobile sdk(s) and a quick intro to flutter/dart"
     speakers:
       -
