--- a/content/2018-10.html
+++ b/content/2018-10.html
@@ -20,12 +20,12 @@ agenda:
     title: "Break"
   -
     time: "7:00"
-    title: "Empathy maketh an engineer"
-    subtitle: "The journey towards becoming a better developer involves in more than just coding. Empathy is the most important skill that any developer should practice. In this talk we will see as a developer how to write code empathetically and how empathy will help you to become a better software craftsman. By the end of the talk, audience will know how to practice empathy, build great softwares and great teams empathetically."
+    title: "Digital Fortress"
+    subtitle: "Let's understand the building blocks of Cryptography through a story"
     video_link: "https://www.youtube.com/watch?v=bb2OSAxQg7M"
     speakers:
       -
-        name: "Narendran R"
+        name: "Nithish Sankaranarayanan"
   -
     time: "7:30"
     title: "Flutter"
