E63 | Add third event

--- a/content/2019-01.html
+++ b/content/2019-01.html
@@ -23,12 +23,14 @@ agenda:
         name: "Arvind Thangamani | Thoughtworks"
   -
     time: "7:30"
-    title: "TBD"
+    title: "Kubernetes in Production: Lessons Learnt"
     video_link: ""
-    subtitle: "TBD"
+    subtitle: "What does it feel like to run a high-traffic large scale application on Kubernetes, with 100+ Microservices and 1600+ Pods, handling 2K requests/second in production? Experience these developers’ journey through the Do’s, the Don'ts, the pains, the pleasures and the Gotcha!’s to production"
     speakers:
       -
-        name: "TBD"
+        name: "Arunvel Sriram S | Thoughtworks"
+      -
+        name: "Prabhu Jayakumar | Thoughtworks"
   -
     time: "8:15"
     title: "Networking & Dinner"
