Sooraj/Ananthu Removed participate url and added video urls

--- a/content/2019-01.html
+++ b/content/2019-01.html
@@ -1,14 +1,14 @@
 ---
 start: 2019-01-31 18:00
 edition: 63
-participate: "https://www.meetup.com/Chennai-Geek-Night/events/258182082/"
+participate: ""
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href='' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
+subnote: "This event will be live streamed on <a href='https://youtu.be/depONrGIlhs?list=PLH8WPOo4hnqyGkUPo3qhw7_JQLlis8QRP' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:00"
     title: "Elasticsearch : Distributed System for Large Scale Data needs"
-    video_link: ""
+    video_link: "https://youtu.be/depONrGIlhs"
     subtitle: "Often late, data explosion is a normal thing with any business. Developers collect, contain and categorize data for various use cases. Likewise, developers expect the system to respond and scale according to your data needs. In this case how can a distributed system like Elasticsearch help one?  Quick Brain map of this talk is: Elasticsearch - what is its forte?, Setting up a cluster and taking advantage of its distributedness, Ingesting data of all sizes and shapes, Riding it as it becomes a Mammoth, Upgrading it for a better future"
     speakers:
       -
@@ -16,7 +16,7 @@ agenda:
   -
     time: "6:50"
     title: "Service Mesh with Envoy"
-    video_link: ""
+    video_link: "https://youtu.be/TirNIwhr0Tk"
     subtitle: "What is a service mesh. What benefits does it provide to a micro services setup. How to build a service mesh with envoy. Service Mesh and Kubernetes"
     speakers:
       -
@@ -24,7 +24,7 @@ agenda:
   -
     time: "7:30"
     title: "Kubernetes in Production: Lessons Learnt"
-    video_link: ""
+    video_link: "https://youtu.be/vtfxW4iflvA"
     subtitle: "What does it feel like to run a high-traffic large scale application on Kubernetes, with 100+ Microservices and 1600+ Pods, handling 2K requests/second in production? Experience these developers’ journey through the Do’s, the Don'ts, the pains, the pleasures and the Gotcha!’s to production"
     speakers:
       -
