--- a/content/2019-02.html
+++ b/content/2019-02.html
@@ -3,12 +3,12 @@ start: 2019-02-28 18:00
 edition: 64
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/259242525/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href='https://youtu.be/depONrGIlhs?list=PLH8WPOo4hnqyGkUPo3qhw7_JQLlis8QRP' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/playlist?list=PLH8WPOo4hnqxTFzYi_W1dUhezPSQ54m7S' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:00"
     title: "Creating a custom Babel Plugin"
-    video_link: " "
+    video_link: "https://youtu.be/HVFzKMXd-f8"
     subtitle: "Babel which is considered as compiler for next generation is often not used to its 100%, so we can unleash the real powers of babel by writing custom plugins thats helps in code transformation and even codemods which helps in manipulating and  maintaining huge code bases very easily. So, in the talk i will be speaking about why we actually need babel and how to utilise in proper way to fulfil our requirements and how to publish our first babel plugin to npm."
     speakers:
       -
@@ -16,11 +16,13 @@ agenda:
   -
     time: "6:40"
     title: "Building ChatBots Using DialogFlow"
-    video_link: ""
-    subtitle: "What is a service mesh. What benefits does it provide to a micro services setup. How to build a service mesh with envoy. Service Mesh and Kubernetes"
+    video_link: "https://youtu.be/6_0mDSOn8rk"
+    subtitle: "Learn to build custom ChatBots and integrate it with applications like Slack. Explore various features that DialogFlow provides to build versatile, intelligent ChatBots."
     speakers:
       -
         name: "Sushmethaa Muhundan | Thoughtworks"
+      -
+        name: "Sowmya Viswanathan | Thoughtworks"
   -
     time: "7:30"
     title: "TBD"
