Add third talk for feb 2019

--- a/content/2019-02.html
+++ b/content/2019-02.html
@@ -25,12 +25,12 @@ agenda:
         name: "Sowmya Viswanathan | Thoughtworks"
   -
     time: "7:30"
-    title: "TBD"
-    video_link: ""
-    subtitle: ""
+    title: "Puppeteer (The headless chrome)"
+    video_link: "https://youtu.be/9NlOLPY_7so"
+    subtitle: "The Puppeteer is a Node library which provides a high-level API to control Chrome. By using this we can do automation, testing, web page performance analysis and many cool stuffs."
     speakers:
       -
-        name: "TBD"
+        name: "Sarath Kumar | Indiafilings.com"
   -
     time: "8:15"
     title: "Networking & Dinner"
