update content for E65

--- a/content/2019-03.html
+++ b/content/2019-03.html
@@ -12,7 +12,8 @@ agenda:
     subtitle: "A quick walkthrough of how cloud storage layer can be abstracted out , its benefits and an introduction to Minio - a S3 compatible open source object storage server."
     speakers:
       -
-        name: "Rajeshwari Krishnakumar | Thoughtworks"
+        name: "Rajeswari Krishnakumar | ThoughtWorks"
+        profile: https://www.linkedin.com/in/rajeswari-krishnakumar/
   -
     time: "6:40"
     title: "Optimization using Julia"
@@ -20,7 +21,8 @@ agenda:
     subtitle: "Julia is a language used for high-performance numerical analysis and computational science. Learn how to solve an optimization problem using Julia."
     speakers:
       -
-        name: "Ginette Thomas Vellera | Thoughtworks"
+        name: "Ginette Vellera | ThoughtWorks"
+        profile: https://www.linkedin.com/in/ginette-vellera-35523314/
   -
     time: "7:20"
     title: "Introduction to Hashistack"
@@ -28,7 +30,8 @@ agenda:
     subtitle: "The idea of this session is to showcase the following major infra concepts:</br>1. Resource scheduling and management.</br>2. Service Discovery.</br>3. Secret management.</br>The infra concepts mentioned above are becoming mandatory to provide easier and faster scalable, self healing, fault tolerant infra. In this session, we are going to explore Hashicorp's set of tools (Nomad, Consul, Vault) for achieving the same."
     speakers:
       -
-        name: "Nithya N | Thoughtworks"
+        name: "Nithya N | ThoughtWorks"
+        profile: https://www.linkedin.com/in/nithyanatarajan/
   -
     time: "8:15"
     title: "Networking & Dinner"
