update talk for E66

--- a/content/2019-04.html
+++ b/content/2019-04.html
@@ -23,12 +23,12 @@ agenda:
         name: "Rima Ram Gaikwad | ThoughtWorks"
   -
     time: "7:30"
-    title: "Testing Infrastructure code with Kitchen"
+    title: "Elm - Functional Programming for Frontend"
     video_link: ""
-    subtitle: "Build and test your infrastructure code locally in a VM/docker for faster feedback using the kitchen framework."
+    subtitle: "Elm is a pure functional language used to develop reliable frontend apps. This session is about discussing the key features that distinguish Elm from other languages."
     speakers:
       -
-        name: "Ninan John | ThoughtWorks"
+        name: "Jawahar | ThoughtWorks"
   -
     time: "8:15"
     title: "Networking & Dinner"
