update talk for E66 with speaker name

--- a/content/2019-04.html
+++ b/content/2019-04.html
@@ -21,6 +21,9 @@ agenda:
     speakers:
       -
         name: "Rima Ram Gaikwad | ThoughtWorks"
+      -
+        name: "Sayeed Hussain | ThoughtWorks"
+        
   -
     time: "7:30"
     title: "Elm - Functional Programming for Frontend"
