add video links for E66

--- a/content/2019-04.html
+++ b/content/2019-04.html
@@ -3,12 +3,12 @@ start: 2019-04-25 18:00
 edition: 66
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/260750771/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href='' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
+subnote: "This event will be live streamed on <a href='https://youtu.be/d_fI23BfpzU?list=PLH8WPOo4hnqxEd3T7hJEXzQ6jxzyXYu5K' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:00"
     title: "Monitoring kubernetes clusters using Prometheus"
-    video_link: ""
+    video_link: "https://youtu.be/d_fI23BfpzU"
     subtitle: ""
     speakers:
       -
@@ -16,7 +16,7 @@ agenda:
   -
     time: "6:45"
     title: "MVVM pattern in iOS, hows and why’s of it"
-    video_link: ""
+    video_link: "https://youtu.be/OzIN1b4QxKQ"
     subtitle: ""
     speakers:
       -
@@ -27,7 +27,7 @@ agenda:
   -
     time: "7:30"
     title: "Elm - Functional Programming for Frontend"
-    video_link: ""
+    video_link: "https://youtu.be/JDhwFdzj8Lk"
     subtitle: "Elm is a pure functional language used to develop reliable frontend apps. This session is about discussing the key features that distinguish Elm from other languages."
     speakers:
       -
