E-67 Added last talks desc

--- a/content/2019-05.html
+++ b/content/2019-05.html
@@ -28,7 +28,7 @@ agenda:
     time: "7:45"
     title: "AnyBody Can Dapp with Hyperledger Composer"
     video_link: ""
-    subtitle: ""
+    subtitle: "It can be overwhelming to hop in into the hyperledger ecosystem. There are lots of things to learn and a tool like Composer makes it really easier to create POCs for Hyperledger Fabric."
     speakers:
       -
         name: "Mohammed Shaffi Ya Kudus | ThoughtWorks"
