E-67 Add first talks desc

--- a/content/2019-05.html
+++ b/content/2019-05.html
@@ -7,9 +7,9 @@ subnote: "This event will be live streamed on <a href='' class='youtube' target=
 agenda:
   -
     time: "6:00"
-    title: "Evolution of deployments: Docker Swarm"
+    title: "Introduction to Docker Swarm"
     video_link: ""
-    subtitle: ""
+    subtitle: "In this talk in high level we will see about what is Docker, Docker Compose, and why Docker Swarm. we will also have demo on creating swarm cluster and deploy the services in cluster."
     speakers:
       -
         name: "Gopinath J  | ThoughtWorks"
@@ -31,7 +31,7 @@ agenda:
     subtitle: "It can be overwhelming to hop in into the hyperledger ecosystem. There are lots of things to learn and a tool like Composer makes it really easier to create POCs for Hyperledger Fabric."
     speakers:
       -
-        name: "Mohammed Shaffi Ya Kudus | ThoughtWorks"
+        name: "Mohammed Shaffi | ThoughtWorks"
   -
     time: "8:30"
     title: "Networking & Dinner"
