E - 67 Add youtube links

--- a/content/2019-05.html
+++ b/content/2019-05.html
@@ -3,12 +3,12 @@ start: 2019-05-30 18:00
 edition: 67
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/261634557/"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href='' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
+subnote: "This event will be live streamed on <a href='https://tinyurl.com/y3s9t9yq' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:00"
     title: "Introduction to Docker Swarm"
-    video_link: ""
+    video_link: "https://youtu.be/DG9crFEYN28?list=PLH8WPOo4hnqyq55d7wxRocLA7e-ekTVtS"
     subtitle: "In this talk in high level we will see about what is Docker, Docker Compose, and why Docker Swarm. we will also have demo on creating swarm cluster and deploy the services in cluster."
     speakers:
       -
@@ -18,7 +18,7 @@ agenda:
   -
     time: "6:55"
     title: "Coroutines in Kotlin"
-    video_link: ""
+    video_link: "https://youtu.be/OzOgCmO5AjI?list=PLH8WPOo4hnqyq55d7wxRocLA7e-ekTVtS"
     subtitle: "In this talk, I will be introducing Coroutines in Kotlin. Will be explaining the need of it and will be talking about how different they are from JVM threads . Finally will be discussing how the Android (Jetpack) community is leveraging these coroutines in making the developer's life easy."
     speakers:
       -
@@ -27,7 +27,7 @@ agenda:
   -
     time: "7:45"
     title: "AnyBody Can Dapp with Hyperledger Composer"
-    video_link: ""
+    video_link: "https://youtu.be/G7KKtv5DPQI?list=PLH8WPOo4hnqyq55d7wxRocLA7e-ekTVtS"
     subtitle: "It can be overwhelming to hop in into the hyperledger ecosystem. There are lots of things to learn and a tool like Composer makes it really easier to create POCs for Hyperledger Fabric."
     speakers:
       -
