Update 68th edition

--- a/content/2019-06.html
+++ b/content/2019-06.html
@@ -13,6 +13,8 @@ agenda:
     speakers:
       -
         name: "Bharani Subramaniam | ThoughtWorks"
+      -
+        name: "Lakshminarasimhan Sudarshan | ThoughtWorks"
   -
     time: "8:00"
     title: "Networking & Dinner"
