Adding youtube like to 68 edition

--- a/content/2019-06.html
+++ b/content/2019-06.html
@@ -8,7 +8,7 @@ agenda:
   -
     time: "6:00"
     title: "TechRadar Vol.20 Walkthrough"
-    video_link: ""
+    video_link: "https://www.youtube.com/watch?v=-2slr4RDZ0I&list=PLH8WPOo4hnqz0axhImTsqRiI7D1-TsUQQ"
     subtitle: "ThoughtWorks just released their most recent <a href='https://www.thoughtworks.com/radar'>Technology Radar, Vol. 20</a>.<br/><br/>If you haven't seen it before, it's an interactive publication that explores the direction our industry is heading. We cover the cutting-edge techniques, tools, platforms and frameworks being developed today and discuss how to apply them to your own work.<br/>"
     speakers:
       -
