--- a/content/2019-07.html
+++ b/content/2019-07.html
@@ -16,6 +16,16 @@ agenda:
         description: "Dani Akash is a React Developer from Pickyourtrail, a travel-tech startup. He is currently working on the React Native mobile app which provides on-trip support to customers travelling with Pickyourtrail. He has worked with many javascript technologies and is an active speaker in the chennai javascript communities. He has also published a book <b>Javascript By Example</b> which covers efficient ways to use javascript in modern applications."
         image: "dani-akash.jpeg"
   -
+    time: "7:00"
+    title: "Using Glitch to eliminate platform adoption barriers - How we reduced the time to 'Hello World' from 10 mins to 10 seconds"
+    subtitle: "The most rejoicing aspect of DevRel (Developer Relations) is to enable the developers to meet their end goals. However, that’s not an excuse to care less about the new developers or hobbyists who are getting on-boarded onto the platform. In fact, I believe that the fresh developers of today are the potential future platform evangelists. As a litmus test, a platform can be judged by it's first ‘Hello-World’ journey that it offers to a fresh developer. In a quest to analyze the adoption barriers and to make the hello-world more welcoming, I stumbled upon a really useful tool called “Glitch” which helped me to create insanely prepared boilerplates for developers to work on. Everything is already configured for the developers to start-off thus letting them validate or experience the richness of the platform upfront. I humbly present to you the story of how we reduced the setup time for our developers from several minutes to just a few seconds with Glitch!"
+    speakers:
+      -
+        name: "Hemchander S"
+        profile: "https://www.linkedin.com/in/hems23"
+        description: "Hemchander is from the Developer Relations team at Freshworks and is actively involved in building a vibrant developer ecosystem."
+        image: "hemchander.jpeg"
+  -
     time: "7:45"
     title: "Memory Safety in Rust"
     subtitle: "In this talk we will be focusing on the language features, that helps Rust to ensure memory safety without needing for a garbage collector."
