--- a/content/2019-07.html
+++ b/content/2019-07.html
@@ -1,7 +1,7 @@
 ---
 start: 2019-07-25 18:00
 edition: 69
-participate: "https://www.meetup.com/Chennai-Geek-Night"
+participate: "https://www.meetup.com/Chennai-Geek-Night/events/263231984"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
 subnote: "This event will be live streamed on <a href='' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
