--- a/content/2019-07.html
+++ b/content/2019-07.html
@@ -3,7 +3,7 @@ start: 2019-07-25 18:00
 edition: 69
 participate: "https://www.meetup.com/Chennai-Geek-Night/events/263231984"
 talk: "https://docs.google.com/forms/d/1llJxKCuEnPXOPHnXUQHnc8Unlt_Y4kPvWJqndjl_6Gg/viewform"
-subnote: "This event will be live streamed on <a href='' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
+subnote: "This event will be live streamed on <a href='https://www.youtube.com/watch?v=O_vVceZxtkc&list=PLH8WPOo4hnqx3vQ1TTrD9xZzIRRjSd8tk' class='youtube' target='_blank' rel='nofollow' onclick=\"ga('send', 'event', 'youtube', 'youtube')\"></a>"
 agenda:
   -
     time: "6:00"
@@ -13,6 +13,7 @@ agenda:
       -
         name: "Dani Akash"
         profile: "https://twitter.com/DaniAkashS"
+        video_link: "https://www.youtube.com/watch?v=O_vVceZxtkc"
         description: "Dani Akash is a React Developer from Pickyourtrail, a travel-tech startup. He is currently working on the React Native mobile app which provides on-trip support to customers travelling with Pickyourtrail. He has worked with many javascript technologies and is an active speaker in the chennai javascript communities. He has also published a book <b>Javascript By Example</b> which covers efficient ways to use javascript in modern applications."
         image: "dani-akash.jpeg"
   -
@@ -23,6 +24,7 @@ agenda:
       -
         name: "Hemchander S"
         profile: "https://www.linkedin.com/in/hems23"
+        video_link: "https://www.youtube.com/watch?v=5GMxumC-sOw"
         description: "Hemchander is from the Developer Relations team at Freshworks and is actively involved in building a vibrant developer ecosystem."
         image: "hemchander.jpeg"
   -
@@ -33,6 +35,7 @@ agenda:
       -
         name: "Jawahar"
         profile: "https://www.jawahar.tech"
+        video_link: "https://www.youtube.com/watch?v=qwJWF7XeRxs"
         description: "Jawahar is a Software Programmer who is passionate about learning new languages and frameworks. He has years of experience in building enterprise grade applications using various technologies. He is specifically interested in practicing functional programming with modern language features. "
         image: "jawahar-babu.jpg"
   -
